[package]
name = "zkp-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"

# Multiple binaries
[[bin]]
name = "zkp_auth_server"
path = "src/main.rs"

[[bin]]
name = "zkp_auth_client"
path = "src/main.rs"